--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -47,7 +47,7 @@ footer:
   copyright:
     notice: '© {year}, IIoT Lab, IS Schools'
     license:
-      enable: true
+      enable: false
       allow_derivatives: false
       share_alike: true
       allow_commercial: false
