--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,7 +39,7 @@ header:
     show_language: false
     show_day_night: true
     show_search: true
-    highlight_active_link: false
+    highlight_active_link: true
 
 # Site footer
 
@@ -91,7 +91,7 @@ features:
       category: ''
       category_id: ''
   search:
-    provider: 
+    provider: wowchemy
     algolia:
       app_id: ''
       api_key: ''
