--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -25,3 +25,10 @@ main:
   - name: Contact
     url: contact
     weight: 60
+  - name: Tags
+    identifier: tags
+    weight: 20
+  - name: Academic
+    parent: tags
+    url: tags/academic/
+    weight: 10
