--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -28,9 +28,24 @@ main:
     parent: media
     url: post
     weight: 20
-
   - name: Events
     parent: media
     url: event
     weight: 40
+
+  - name: Achievements
+    identifier: ach
+    weight: 20
+  - name: Grants
+    parent: ach
+    url: grant
+    weight: 20
+  - name: Awards
+    parent: ach
+    url: award
+    weight: 40
+
+  - name: Open Positions
+    url: position
+    weight: 50
   
