branch name change in cms

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -106,7 +106,7 @@ features:
 
 extensions:
   cms:
-    branch: main
+    branch: master
     local_backend: false
   academicons:
     enable: false
